<resources>
    <string name="app_name">UMCO APP</string>


    <!-- Content Description -->
    <string name="go_back_cd">Go back</string>
    <string name="add_favourite_cd">Add to favourite</string>
    <string name="notification_cd">Display notifications</string>
    <string name="delete_item_cd">Delete this item</string>
    <string name="banner_cd">Banners</string>
    <string name="edit_address_cd">Edit this address</string>


    <!-- Welcome Screen -->
    <string name="get_your_groceries">Get your groceries right away</string>
    <string name="log_in">Log in</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome</string>


    <!-- Login Screen -->
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_label">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="skip">Skip</string>
    <string name="caption_reset_password">your recovery password will be sent to your registered email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_new_account">Create new account</string>


    <!-- Sign up -->
    <string name="password_mismatch">Password doesn\'t match</string>


    <!-- Home Screen -->
    <string name="home">home</string>
    <string name="see_all">see all</string>
    <string name="categories">Categories</string>
    <string name="empty_stock">Stock is empty</string>
    <string name="register">Register first to add a product</string>


    <!-- Details Screen -->
    <string name="in_stock_qty">21 left</string>
    <string name="in_stock_label">in stock</string>


    <!-- Explore Screen -->
    <string name="explore">Explore</string>
    <string name="product_details">Product Details</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="caption_item_added">Your item has been added successfully</string>
    <string name="continue_shopping">Continue Shopping</string>


    <!-- Cart Screen -->
    <string name="cart">Cart</string>
    <string name="price_cart_label">Price:</string>
    <string name="quantity_cart_label">Quantity:</string>
    <string name="checkout_button">Checkout</string>
    <string name="total_label">Total</string>
    <string name="total_tax_label">Total Tax</string>
    <string name="delivery_label">Delivery</string>
    <string name="subtotal_label">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="error_update_cart">Error has been occurred</string>
    <string name="minimum_one">Minimum is one item</string>
    <string name="total_cart">total:</string>


    <!-- Favorite Screen -->
    <string name="favorite">Favorite</string>
    <string name="saved_on">Saved on</string>
    <string name="sar_currency">SAR</string>


    <!-- Profile Screen -->
    <string name="profile">Profile</string>
    <string name="register_your_name">Register your name</string>
    <string name="your_email_address">your email address</string>
    <string name="account_settings">Account Settings</string>
    <string name="my_orders">My Orders</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="personal_information">Personal information</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="post_code">Post Code</string>
    <string name="key_country">+966</string>
    <string name="save">Save</string>
    <string name="login">Login</string>


    <!-- Search Screen -->
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="search_label">Search</string>


    <!-- Order Screen -->
    <string name="ongoing">Ongoing</string>
    <string name="history">History</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="order_id_label">ORDER ID -</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="order_details">Order details</string>
    <string name="shipped">SHIPPED</string>
    <string name="delivered_between">Delivered between</string>
    <string name="qty">QTY</string>
    <string name="payment_method">Payment Method</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="shipment_1">Shipment 1 :</string>
    <string name="total">Total</string>
    <string name="no_orders_found">No orders found yet..</string>


    <!-- Checkout Screen -->
    <string name="shipping_address">Shipping Address</string>
    <string name="shipping_location">Shipping Location</string>
    <string name="create_an_address">Create a new address</string>
    <string name="caption_address">please fill the address where the order will be deliver to</string>
    <string name="caption_update_address">please update the current address where the order will be deliver to</string>
    <string name="select_from_map">Select from map</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="street_address">Street Address</string>
    <string name="country">Country</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="caption_delivery_time">please select the time where the order will be deliver to</string>
    <string name="caption_billing_address">please fill the billing address information below</string>
    <string name="caption_payment">please select the payment option</string>
    <string name="caption_shipping">please select the shipping option</string>
    <string name="add_card">Add Card</string>
    <string name="card_number">Card Number</string>
    <string name="expire_date">MM/YYYY</string>
    <string name="cvv">CVV</string>
    <string name="full_name">Full Name</string>
    <string name="pay">Pay</string>
    <string name="billing_address">Billing Address</string>
    <string name="place_order">Place order</string>
    <string name="caption_order_summary">here is your order summary</string>
    <string name="promotion_code">Promotion Code</string>
    <string name="code">Code</string>
    <string name="confirm">Confirm</string>
    <string name="enter_promotion_code">Enter promotion code</string>
    <string name="caption_order_placed">Your order has been placed, We would give you a call shortly for confirmation</string>
    <string name="checkout">Checkout</string>
    <string name="gotcha">Gotcha !</string>
    <string name="track_your_order">Track Your Order</string>
    <string name="next">Next</string>
    <string name="update_address">Update Address</string>
    <string name="update">Update</string>
    <string name="create">Create</string>
    <string name="no_addresses">No address have been added yet.</string>
    <string name="create_address">Create address</string>
    <string name="choose_address">Choose address</string>
    <string name="shipping">Shipping</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="select_shipping_method">Select shipping method</string>
    <string name="product_total_text">products, total</string>
    <string name="quantity_label">quantity</string>
    <string name="placed_on">placed on</string>
    <string name="order_id">ORDER ID -</string>
    <string name="select_payment">Select payment method</string>
    <string name="total_items">Total Items</string>
    <string name="shipping_method_label">Shipping method</string>
    <string name="payment_method_label">Payment method</string>
    <string name="order_label">Order</string>


    <!-- Recycler view layout -->
    <string name="weight_kg">/ kg</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="quantity">Quantity</string>
    <string name="view_details">View Details</string>


    <!-- Empty state -->
    <string name="try_to_explore_items">Try to explore items</string>
    <string name="sorry">Sorry!</string>
    <string name="back_to_home">Back to Home</string>
    <string name="empty_search">Try a different spelling or more general terms.</string>
    <string name="the_cart_is_empty">The Cart is empty!</string>
    <string name="the_favorite_list_is_empty">The favorite list is empty!</string>
    <string name="one_quantity">1</string>
    <string name="zero">0.00</string>
    <string name="test">test</string>


    <!-- Dummy data for test   -->
    <string name="dummy">Product Hunt posting, digital E-vape tool. Product Hunt posting digital e-vape tool. DogeCoin buying growth hacker. Crypto-nerd Notion boyfriend. College Dropout, overenthusiastic founder.
Figma using Tik-Toker libertarian. Roam Research girlfriend Medium blogger. Softbank-injected dropbox alternative. Substack blogging Thiel Fellow dropout.
AngelList reading Beta-tester. Hypergrowth activist investor. Softbank-injected dropbox </string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="confirm_password">Confirm password</string>


</resources>